# RayTracer

./: .gitignore  CMakeLists.txt
include/: window.h
src/: main.cpp  window.cpp
src/core/: window.cpp  window.h
src/renderer/: renderer.cpp  renderer.h
